2005-11-04  Bill Wohler  <wohler@newt.com>

	* mh-customize.el: Refactor faces. Move grayscale requirements
	last before t. Use uniform line breaks.
	(mh-min-colors-defined-flag): New variable.
	(mh-defface-compat): New function. Provides backward compatibility
	for face specs.
	(mh-show-header, mh-show-date, mh-show-cc, mh-folder-to) 
	(mh-folder-refiled, mh-folder-cur-msg-number, mh-folder-cur-msg) 
	(mh-folder-body): Use mh-defface-compat.

2005-11-03  Dan Nicolaescu  <dann@ics.uci.edu>

	* mh-customize.el (mh-folder-body-face, mh-folder-cur-msg-face)
	(mh-folder-cur-msg-number-face, mh-folder-refiled-face)
	(mh-folder-to-face): Use the min-colors attribute instead of the
	type attribute.

2005-11-03  Bill Wohler  <wohler@newt.com>

	* mh-customize.el (mh-refile-preserves-sequences-flag)
	(mh-tick-seq, mh-update-sequences-after-mh-show-flag): Sync
	docstrings with manual.

	* mh-e.el (mh-update-sequences): Sync docstrings with manual.

	* mh-seq.el (mh-delete-seq, mh-list-sequences, mh-narrow-to-seq) 
	(mh-widen, mh-toggle-tick, mh-narrow-to-tick): Sync docstrings
	with manual.

2005-11-01  Bill Wohler  <wohler@newt.com>

	* mh-comp.el (mh-redist-full-contents) Convert defvar to
	defcustom.
	(mh-smail, mh-extract-rejected-mail, mh-forward, mh-redistribute)
	(mh-reply, mh-send, mh-send-other-window)
	(mh-fill-paragraph-function): Sync docstrings with manual.
	(mh-edit-again, mh-extract-rejected-mail, mh-redistribute): Rename
	msg argument to message (to make for a better docstring).

	* mh-customize.el (mh-redist-full-contents-flag): Convert defvar
	to defcustom. Rename by adding -flag.
	(mh-compose-forward-as-mime-flag)
	(mh-compose-letter-function, mh-forward-subject-format)
	(mh-insert-x-mailer-flag, mh-reply-default-reply-to)
	(mh-reply-show-message-flag, mh-letter-mode-hook): Sync docstrings
	with manual.

	* mh-print.el (mh-ps-spool-buffer, mh-ps-spool-a-msg) 
	(mh-ps-print-msg): Remove debugging messages.
	(mh-ps-print-msg-show, mh-ps-print-msg-show) 